--- a/Blocks/Infra/LoggingBlock/Implementation/LoggingBlock.Implementation.csproj
+++ b/Blocks/Infra/LoggingBlock/Implementation/LoggingBlock.Implementation.csproj
@@ -25,8 +25,8 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Interfaces\LoggingBlock.Interfaces.csproj" />
-    <ProjectReference Include="..\Components\Logging.Components.Queries\Logging.Components.Queries\LoggingBlock.Components.Queries.csproj" />
-    <ProjectReference Include="..\Components\Logging.Components.Command\LoggingBlock.Components.Commands.csproj" />
+    <ProjectReference Include="..\Components\Commands\LoggingBlock.Components.Commands.csproj" />
+    <ProjectReference Include="..\Components\Queries\LoggingBlock.Components.Queries.csproj" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="MongoDB.Driver" Version="2.7.0" />
