--- a/Blocks/Infra/LoggingBlock/Components/Commands/Dharma.LoggingBlock.Components.Commands.csproj
+++ b/Blocks/Infra/LoggingBlock/Components/Commands/Dharma.LoggingBlock.Components.Commands.csproj
@@ -10,7 +10,7 @@
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\..\..\Core\Dharma.Core.csproj" />
-    <ProjectReference Include="..\..\Models\Logging.Models\LoggingBlock.Models.csproj" />
+    <ProjectReference Include="..\..\Models\Logging.Models\Dharma.LoggingBlock.Models.csproj" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Update="LoggingBlockCommand.resx">
