--- a/Blocks/Infra/LoggingBlock/Public/Dharma.LoggingBlock.csproj
+++ b/Blocks/Infra/LoggingBlock/Public/Dharma.LoggingBlock.csproj
@@ -25,8 +25,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\Implementation\LoggingBlock.Implementation.csproj" />
-    <ProjectReference Include="..\Models\Logging.Models\LoggingBlock.Models.csproj" />
+    <ProjectReference Include="..\Implementation\Dharma.LoggingBlock.Implementation.csproj" />
+    <ProjectReference Include="..\Models\Logging.Models\Dharma.LoggingBlock.Models.csproj" />
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="Extensions\LoggingExtension.cs" />
