--- a/Blocks/ItemsBlock/Models/Models/Dharma.ItemsBlock.Models.csproj
+++ b/Blocks/ItemsBlock/Models/Models/Dharma.ItemsBlock.Models.csproj
@@ -15,16 +15,13 @@
     <ProjectReference Include="..\..\..\Infra\Core\Dharma.Core.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Update="ItemResources.resx">
+    <EmbeddedResource Condition=" '$(EnableDefaultEmbeddedResourceItems)' == 'true' " Update="Properties\ItemResources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>ItemResources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <Compile Update="ItemResources.Designer.cs">
-      <DependentUpon>ItemResources.resx</DependentUpon>
-    </Compile>
-    <Compile Update="ItemResources.Designer.cs">
+    <Compile Condition=" '$(EnableDefaultCompileItems)' == 'true' " Update="Properties\ItemResources.Designer.cs">
       <DependentUpon>ItemResources.resx</DependentUpon>
     </Compile>
   </ItemGroup>
