Introducing Error handling into ItemsBlock and helper to connect to other Blocks

--- a/Blocks/Infra/Core/Dharma.Core.csproj
+++ b/Blocks/Infra/Core/Dharma.Core.csproj
@@ -14,11 +14,13 @@
     <Compile Remove="Query.cs" />
     <Compile Remove="Message.cs" />
     <Compile Remove="BaseCommandDecorator.cs" />
+    <Compile Remove="Repository.cs" />
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Autofac" Version="4.8.1" />
-    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.2.2" />
+    <PackageReference Include="Autofac.Extensions.DependencyInjection" Version="4.3.0" />
     <PackageReference Include="MongoDB.Driver" Version="2.7.0" />
+    <PackageReference Include="Newtonsoft.Json" Version="11.0.2" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="Gateway\" />
