--- a/Blocks/Infra/LoggingBlock/Public/Dharma.LoggingBlock.csproj
+++ b/Blocks/Infra/LoggingBlock/Public/Dharma.LoggingBlock.csproj
@@ -8,6 +8,7 @@
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DocumentationMarkdown>'..\..\..\Readme.md</DocumentationMarkdown>
     <DocumentationFile>bin\Debug\netcoreapp2.1\LoggingBlock.xml</DocumentationFile>
+    <WarningLevel>2</WarningLevel>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DocumentationMarkdown>'..\..\..\Readme.md</DocumentationMarkdown>
