--- a/Blocks/Infra/LoggingBlock/Components/Commands/Dharma.LoggingBlock.Components.Commands.csproj
+++ b/Blocks/Infra/LoggingBlock/Components/Commands/Dharma.LoggingBlock.Components.Commands.csproj
@@ -10,17 +10,18 @@
     <ProjectReference Include="..\..\Models\Logging.Models\Dharma.LoggingBlock.Models.csproj" />
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Condition=" '$(EnableDefaultEmbeddedResourceItems)' == 'true' " Update="Properties\LoggingBlockCommand.resx">
+    <EmbeddedResource Update="Properties\LoggingBlockCommandResources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
-      <LastGenOutput>LoggingBlockCommand.Designer.cs</LastGenOutput>
+      <LastGenOutput>LoggingBlockCommandResources.Designer.cs</LastGenOutput>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
     <Compile Remove="LoggingCommandHandler.cs" />
+    <Compile Remove="Properties\LoggingBlockCommand.Designer.cs" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Condition=" '$(EnableDefaultCompileItems)' == 'true' " Update="Properties\LoggingBlockCommand.Designer.cs">
-      <DependentUpon>LoggingBlockCommand.resx</DependentUpon>
+    <Compile Update="Properties\LoggingBlockCommandResources.Designer.cs">
+      <DependentUpon>LoggingBlockCommandResources.resx</DependentUpon>
     </Compile>
   </ItemGroup>
 </Project>
