--- a/Blocks/ItemsBlock/Models/Tests/Dharma.ItemsBlock.Models.Tests.csproj
+++ b/Blocks/ItemsBlock/Models/Tests/Dharma.ItemsBlock.Models.Tests.csproj
@@ -11,6 +11,7 @@
     <None Remove="ItemModelTests.config" />
   </ItemGroup>
   <ItemGroup>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0-preview-20180816-01" />
     <PackageReference Include="NUnit" Version="3.10.1" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.10.0" />
   </ItemGroup>
