--- a/Blocks/OrganizationBlock/Components/Tests/Dharma.OrganizationBlock.Tests.csproj
+++ b/Blocks/OrganizationBlock/Components/Tests/Dharma.OrganizationBlock.Tests.csproj
@@ -4,4 +4,8 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.NET.Test.Sdk" Version="15.9.0-preview-20180816-01" />
+  </ItemGroup>
+
 </Project>
