--- a/.gitignore
+++ b/.gitignore
@@ -41,3 +41,4 @@ Thumbs.db
 *.dotCover
 .idea/.idea.Dharma/.idea/workspace.xml
 .idea/.idea.Dharma/.idea/workspace.xml
+.idea/.idea.Dharma/.idea/workspace.xml
