--- a/Blocks/OrganizationBlock/Components/Queries/Dharma.OrganizationBlock.Components.Queries.csproj
+++ b/Blocks/OrganizationBlock/Components/Queries/Dharma.OrganizationBlock.Components.Queries.csproj
@@ -4,4 +4,9 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\..\..\Infra\Core\Dharma.Core.csproj" />
+    <ProjectReference Include="..\..\Models\Models\Dharma.OrganizationBlock.Models.csproj" />
+  </ItemGroup>
+
 </Project>
