--- a/.gitignore
+++ b/.gitignore
@@ -42,3 +42,4 @@ Thumbs.db
 .idea/.idea.Dharma/.idea/workspace.xml
 .idea/.idea.Dharma/.idea/workspace.xml
 .idea/.idea.Dharma/.idea/workspace.xml
+.idea/.idea.Dharma/.idea/workspace.xml
