--- a/Blocks/OrganizationBlock/Interfaces/Dharma.OrganizationBlock.Interfaces/Dharma.OrganizationBlock.Interfaces.csproj
+++ b/Blocks/OrganizationBlock/Interfaces/Dharma.OrganizationBlock.Interfaces/Dharma.OrganizationBlock.Interfaces.csproj
@@ -4,4 +4,7 @@
         <TargetFramework>netcoreapp2.1</TargetFramework>
     </PropertyGroup>
 
+    <ItemGroup>
+      <ProjectReference Include="..\..\Models\Models\Dharma.OrganizationBlock.Models.csproj" />
+    </ItemGroup>
 </Project>
