--- a/Blocks/OrganizationBlock/Components/Queries/Dharma.OrganizationBlock.Components.Queries.csproj
+++ b/Blocks/OrganizationBlock/Components/Queries/Dharma.OrganizationBlock.Components.Queries.csproj
@@ -9,4 +9,18 @@
     <ProjectReference Include="..\..\Models\Models\Dharma.OrganizationBlock.Models.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <EmbeddedResource Update="Properties\Resources.resx">
+      <Generator>ResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Remove="Properties\OrganizationBlockQuery.Designer.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <Compile Update="Properties\Resources.Designer.cs">
+      <DependentUpon>Resources.resx</DependentUpon>
+    </Compile>
+  </ItemGroup>
 </Project>
